--- a/css/powerUiStyles.css
+++ b/css/powerUiStyles.css
@@ -54,36 +54,113 @@ nav{
   color: #fff;
   font-size: 25px;
 }
-/* The sidenav */
-.sidenav {
-  bottom: 0px;
+.bodyContent{
+  border: 1px solid green;
   height: 90vh;
-  width: 200px;
-  /* position: fixed; */
+  display: flex;
+}
+
+
+/* Fixed sidenav, full height */
+.sidenav {
+  height: 90vh;
+  width: 270px;
+  /* position: absolute; */
   z-index: 1;
-  top: 0;
+  bottom: 0;
   left: 0;
-  background-color: #fff;
-  border-right: 1px solid lightgray;
+  background-color: whitesmoke;
   overflow-x: hidden;
   padding-top: 20px;
 }
-/* The navigation menu links */
-.sidenav a {
-  padding: 8px 8px 8px 32px;
+
+/* Style the sidenav links and the dropdown button */
+.sidenav .topicItem, .dropdown-btn {
+  padding: 6px 10px 6px 16px;
   text-decoration: none;
-  font-size: 15px;
-  color: #818181;
+  font-size: 20px;
+  color: #554e4e;
   display: block;
-  transition: 0.3s;
+  border: none;
+  background: none;
+  width:100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
 }
 
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: #f1f1f1;
+/* On mouse-over */
+.sidenav .topicItem:hover, .dropdown-btn:hover {
+  color: #192DD3;
 }
 
-/* Page content */
+/* Main content */
 .main {
-  margin-left: 200px; /* Same as the width of the sidenav */
+  flex-grow: 1;
+  font-size: 20px; /* Increased text to enable scrolling */
+  padding: 10px;
+  width: 100%;
+  border: 1px solid red;
+}
+
+/* Add an active class to the active dropdown button */
+.active {
+  background-color:rgb(25, 45, 211,0.5);
+  /* opacity: 10%; */
+  color: black;
+}
+
+/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+.subTopicContainer {
+  display: none;
+  background-color: grey;
+  padding-left: 8px;
+}
+/* Optional: Style the caret down icon */
+.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+}
+.subTopicLink{
+  color: white;
+  text-decoration: none;
+}
+.subTopicLink:hover{
+  color: gray;
+}
+.sectionButton:hover{
+  cursor: pointer;
+}
+.topicAndSubTopicGroup li{
+  color: #818181;
+  padding-left: 10%;
+}
+.topicAndSubTopicGroup li:hover{
+  color: #192DD3;
+  padding-left: 10%;
+  cursor: pointer;
+}
+.pageContent{
+  width: 100%;
+}
+.itemDisplayContainer{
+  width: 100%;
+  height: auto;
+  border: 1px solid black;
+  word-break: break-all;
+
+}
+.itemcontainerHeader{
+  width: 100%;
+  border: 1px solid green;
+  height: 80px;
+}
+.itemTitle{
+  position: relative;
+  top: 50%;
+  transform: translate(0, -50%);
+  padding: 10px;
+}
+.itemText{
+padding: 20px;
 }
